# network-audio-controller

./: CHANGELOG.md  pylintrc  pyproject.toml
.circleci/: config.yml
debian/: changelog  control  copyright  gbp.conf  rules
netaudio/: __init__.py
netaudio/commands/: __init__.py  cli_utils.py
netaudio/commands/channel/: list.py
netaudio/commands/device/: __init__.py  configure.py  list.py
netaudio/commands/server/: __init__.py  http.py  mdns.py
netaudio/commands/subscription/: __init__.py  add.py  list.py  remove.py
netaudio/console/: __init__.py  application.py  device_discovery.py  json_encoder.py
netaudio/console/commands/: __init__.py
netaudio/console/commands/channel/: __init__.py  _list.py  list.py
netaudio/console/commands/config/: __init__.py
netaudio/console/commands/device/: __init__.py  _list.py  configure.py  list.py
netaudio/console/commands/server/: __init__.py  _http.py  _mdns.py  http.py  mdns.py
netaudio/console/commands/subscription/: __init__.py  _add.py  _list.py  _remove.py  add.py  list.py  remove.py
netaudio/dante/: browser.py  channel.py  const.py  device.py  protocols.py  subscription.py
netaudio/dante2/: __init__.py  application.py  arc_service.py  channel.py  cmc_service.py  dbc_service.py  device.py  discovery.py  service.py  settings_service.py  subscription.py  util.py  volume_service.py
netaudio/utils/: __init__.py  cli.py  json_encoder.py  network.py
