[tool.poetry]
authors = ["Christopher Ritsen <chris.ritsen@gmail.com>"]
classifiers = ["Topic :: Multimedia :: Sound/Audio"]
description = "Control Audinate Dante network audio devices without Dante Controller"
documentation = "https://github.com/chris-ritsen/network-audio-controller/wiki"
include = ["CHANGELOG.md", "LICENSE"]
keywords = ["audinate", "audio", "cli", "dante", "network"]
license = "Unlicense"
name = "netaudio"
readme = "README.md"
repository = "https://github.com/chris-ritsen/network-audio-controller"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
twisted = "^25.5.0"
zeroconf = "^0.147.0"
sqlitedict = "^2.1.0"
redis = "^6.4.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
fire = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
netaudio = "netaudio:main"

# Recommended, see: https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html#choosing-an-import-mode
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.pytest.ini_options.exclude]
patterns = [
    "*/__pycache__/*",
    "*.pyc",
    "*.pyo"
]
